# q2proto

./: .clang-format  .gitignore  README.md
.github/workflows/: build.yml
inc/q2proto/: q2proto.h  q2proto_client.h  q2proto_coords.h  q2proto_deflate_impl_helper.h  q2proto_deflate_impl_helper.inc  q2proto_defs.h  q2proto_error.h  q2proto_game_api.h  q2proto_gametype.h  q2proto_inflate_impl_helper.h  q2proto_inflate_impl_helper.inc  q2proto_io.h  q2proto_limits.h  (+12 more)
src/: dummy_q2protodbg_shownet.c  dummy_q2protoio_deflate.c  dummy_q2protoio_get_error.c  dummy_q2protoio_inflate.c  dummy_q2protoio_read.c  dummy_q2protoio_write.c  q2proto_client.c  q2proto_coords.c  q2proto_crc.c  q2proto_error.c  q2proto_internal.h  q2proto_internal_bit_read_write.h  q2proto_internal_common.c  q2proto_internal_common.h  q2proto_internal_debug.c  q2proto_internal_debug.h  q2proto_internal_defs.h  q2proto_internal_download.c  q2proto_internal_download.h  q2proto_internal_fmt.c  q2proto_internal_fmt.h  q2proto_internal_io.h  q2proto_internal_maybe_zpacket.c  q2proto_internal_maybe_zpacket.h  q2proto_internal_packing.c  q2proto_internal_packing.h  q2proto_internal_protocol.h  q2proto_internal_string.h  q2proto_multicast.c  q2proto_proto_kex.c  q2proto_proto_kex.h  q2proto_proto_q2pro.c  q2proto_proto_q2pro.h  q2proto_proto_q2pro_extdemo.c  q2proto_proto_q2pro_extdemo.h  q2proto_proto_q2repro.c  q2proto_proto_q2repro.h  q2proto_proto_r1q2.c  q2proto_proto_r1q2.h  q2proto_proto_vanilla.c  (+10 more)
tests/: meson.build
tools/: demodump.cpp  meson.build  q2proto_config.h  q2protodbg.cpp  q2protoerr.cpp  q2protoio.cpp  q2protoio.hpp  scope.hpp  windows-utf8.manifest
(+17 files in other folders)
